solution: add unit test